# scara_arm

./: .gitmodules  README.md
gripper_descriptions/two_finger_gripper_description/: CMakeLists.txt  package.xml
gripper_descriptions/vacuum_gripper_description/: CMakeLists.txt  package.xml
scara_arm/: CMakeLists.txt  package.xml
scara_arm/launch/: robot_bringup.launch
scara_arm/src/: manual_control.py
scara_arm_2_finger_gripper_config/: .setup_assistant  CMakeLists.txt  package.xml
scara_arm_2_finger_gripper_config/config/: fake_controllers.yaml  gazebo_scara_arm.urdf  kinematics.yaml  ompl_planning.yaml  scara_arm.srdf
scara_arm_2_finger_gripper_config/launch/: default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
scara_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
scara_arm_config/config/: fake_controllers.yaml  gazebo_scara_arm.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  scara_arm.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml  stomp_planning_adapter.yaml
scara_arm_config/launch/: chomp-stomp_planning_pipeline.launch.xml  chomp_planning_pipeline.launch.xml  chomp_stomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-stomp_planning_pipeline.launch.xml  ompl_chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp-chomp_planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml
scara_arm_description/: CMakeLists.txt  package.xml
scara_arm_description/launch/: controller.launch  controller.yaml  display.launch  display_suction_gripper.launch  display_two_finger_gripper.launch  display_vacuum_gripper.launch  gazebo.launch
scara_arm_hw_interface/: CMakeLists.txt  package.xml
scara_arm_hw_interface/arm_firmware/scara_arm_v1/: scara_arm_v1.ino
scara_arm_hw_interface/arm_firmware/scara_arm_v1/scara_arm_hw_interface/: joint_arm.h
scara_arm_hw_interface/config/: scara_arm_controllers.yaml  scara_arm_grippers.yaml
scara_arm_hw_interface/include/scara_arm_hw_interface/: scara_arm_hw_interface.h
scara_arm_hw_interface/launch/: scara_arm_hw_main.launch
scara_arm_hw_interface/msg/: joint_arm.msg
scara_arm_hw_interface/src/: scara_arm_hw_interface.cpp  scara_arm_hw_main.cpp
scara_arm_vacuum_gripper_config/: .setup_assistant  CMakeLists.txt  package.xml
(+81 files in other folders)
